--- a/components/sass/_smartphone.scss
+++ b/components/sass/_smartphone.scss
@@ -4,7 +4,7 @@ Smartphones
 @media handheld and (max-width: 480px), screen and (max-device-width: 480px), screen and (max-width: 700px){
 
 	.content{
-		max-width:310px;
+		//max-width:310px;
 	}
 
 }
