--- a/components/sass/_variables.scss
+++ b/components/sass/_variables.scss
@@ -1,3 +1,5 @@
 $fontPrimary	: helvetica, arial, 'Open Sans', sans-serif;
+$mainRed		: #e72f37;
 $redDev			: 1px solid red;
-$blueDev			: 1px solid blue;
+$blueDev		: 1px solid blue;
+$greenDev		: 1px solid green;
