--- a/components/sass/_base.scss
+++ b/components/sass/_base.scss
@@ -1,8 +1,7 @@
 @import url('http://fonts.googleapis.com/css?family=Open+Sans');
 
 html {
-    position: relative;
-    min-height: 100%;
+
 }
 
 body {
@@ -13,6 +12,7 @@ p, a, h1, h2, h3{
 	font-family: $fontPrimary;
     line-height:160%;
     font-weight:bold;
+    color: $mainRed;
 }
 
 h1 {
