--- a/partials/main.html
+++ b/partials/main.html
@@ -1,19 +1,20 @@
 <header>
-	<div class="content">
-		
-        <!-- <object class="svg-menu" type="image/svg+xml" data="images/SVG/menu.svg">Fallback</object> -->
+	<img class="svg-logo" src="images/SVG/nts-logo-hollow.svg">
 
-		<nav>
+
+	<div class="content"> 
+
+		<!-- <nav>
 			<ul>
 				
 				<li><a href="#">services</a></li>
 				<li><a href="#">work</a></li>
-				<object class="svg-logo" type="image/svg+xml" data="images/SVG/nts-logo-hollow.svg">Fallback</object>
+				
 				<li><a href="#">team</a></li>
 				<li><a href="#">contact</a></li>
 				
 			</ul>
-		</nav><!-- nav -->
+		</nav> nav --> 
 		
 
 	</div><!-- header-content -->
@@ -24,23 +25,13 @@
 
 		<section class="section-1">
 			<h1>Hi, we're nts creative</h1>
-			<h2>We are a small, London-based team of web developers and designers</h2>
+			<h2>We are a small, London-based team who design and develop things for the web.</h2>
 			
-			<object class="svg-down" type="image/svg+xml" data="images/SVG/down-button.svg">
-				Fallback
-			</object>
+			<img class="svg-wwd" src="images/SVG/what-we-do.svg">
+			<!-- <img class="svg-down" src="images/SVG/down-button.svg"> -->
 			
 		</section><!-- section-1 -->
 
-
-
-
-		<section class="section-2">
-			<h1>What we do</h1>
-
-			<object class="svg-wwd" type="image/svg+xml" data="images/SVG/what-we-do.svg">Fallback</object>
-			
-		</section><!-- section-2 -->
 
 
 
@@ -92,19 +83,36 @@
 
 
 
-		<section class="section-5">
-			<h1>Contact</h1>
-		</section><!-- section-5 -->
-
-
-
 	</div><!-- main content -->
 </div><!-- main -->
 
 <footer>
 	<div class="content">
-		<object class="svg-footer" type="image/svg+xml" data="images/SVG/footer.svg">
-			Fallback
-		</object>
+		<h1>Contact</h1>
+
+		<a href="mailto:info@ntscreative.co.uk" target="_top">
+			<div class="mail-button-container">
+				<img class="svg-mail-1" src="images/SVG/mail-empty.svg">
+				<img class="svg-mail-2" src="images/SVG/mail-icon.svg">
+			</div>
+		</a>
+
+		<div class="footer-label">
+			<img class="svg-footer" src="images/SVG/footer.svg">
+
+			<div class="footer-info">
+				<p>&copy; NTS Creative Ltd 2014</p>
+				<p>NTS Creative Ltd is a registered company (No. 7974994) in England and Wales.</p>
+				<p><a href="mailto:info@ntscreative.co.uk" target="_top">info@ntscreative.co.uk</a></p>
+				<p><a href="">Privacy</a> | <a href="">Top</a></p>
+			</div>
+		</div><!-- footer-label -->
+
 	</div><!-- footer-content -->
 </footer><!-- footer -->
+
+
+
+
+
+
