--- a/components/sass/_layout.scss
+++ b/components/sass/_layout.scss
@@ -17,63 +17,70 @@ Header
 
 header{
     z-index: 9000;
-    position:fixed;
+    position:absolute;
     left: 0px;
     right: 0px;
     top: 0px;
     height: 65px;
-    background: #fff;
 
-
-    .content{
+    
+    .svg-logo{
+        display: block;
+        width: 80px;
         position: relative;
-        margin: 0px auto;
-        width: 491px;
+        margin: 0 auto;
+        margin-top: 10px;
+    }
 
-        .svg-menu{
-            width:120px;
-        }
+    // .content{
+    //     position: relative;
+    //     margin: 0px auto;
+    //     width: 491px;
+
+    //     .svg-menu{
+    //         width:120px;
+    //     }
 
 
-        nav{
-            position:relative;;
-            overflow:hidden;
-            width: 100%;
-            margin: 0 auto;
+    //     nav{
+    //         position:relative;;
+    //         overflow:hidden;
+    //         width: 100%;
+    //         margin: 0 auto;
             
 
-            ul{
+    //         ul{
 
-                .svg-logo{
-                    width: 50px;
-                    position: relative;
-                    margin: 5px 20px;
-                    float: left;
-                }
+    //             .svg-logo{
+    //                 width: 50px;
+    //                 position: relative;
+    //                 margin: 5px 20px;
+    //                 float: left;
+    //             }
 
-                li{
-                    display:block;
-                    margin-top:20px;
-                    width: 100px;
-                    position: relative;
-                    float: left;
-                    text-align: center;
+    //             li{
+    //                 display:block;
+    //                 margin-top:20px;
+    //                 width: 100px;
+    //                 position: relative;
+    //                 float: left;
+    //                 text-align: center;
 
-                    a{
-                        text-decoration: none;
-                        padding:5px 10px 5px 10px;
-                        font-size: 14px;
+    //                 a{
+    //                     text-decoration: none;
+    //                     padding:5px 10px 5px 10px;
+    //                     font-size: 14px;
 
 
-                        &:hover{
-                           //padding-left:38px; 
-                           text-decoration: underline;
-                        }
-                    }
-                }
-            }
-        }
-    }
+    //                     &:hover{
+    //                        //padding-left:38px; 
+    //                        text-decoration: underline;
+    //                     }
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
 
     
 }
@@ -99,7 +106,7 @@ Main
     .section-1{
         
         h1{
-            margin-top:25vh;
+            margin-top:20vh;
         }
 
 
@@ -109,6 +116,13 @@ Main
             margin:0px auto;
             margin-top:10vh;
 
+        }
+
+        .svg-wwd{
+            display: block;
+            margin:0px auto;
+            max-width:750px;
+            margin-top:12vh;
         }
         
         
@@ -189,19 +203,77 @@ Main
         }
     }
 
-    .section-5{
-
-    }
-
 }
 
 
 
 footer{
-    .svg-footer{
-        display: block; 
-        width:120px;
+
+    h1{
+        margin-bottom: 7vh;
+    }
+
+    .mail-button-container{
+        margin: 0px auto;
+        position: relative;
+        width: 80px;
+        height: 90px;
+        margin-bottom: 15vh;
+
+        img{
+            width: 100%;
+            position: absolute;
+            top: 0px;
+        }
+
+        .svg-mail-2{
+            top: 3px;
+        }
+
+        &:hover{
+
+            .svg-mail-1{
+                transform: rotateY(180deg);
+                transition: 0.6s;
+            }
+        }
+    }
+
+    .footer-label{
+        position: relative;
+        width:140px;
         margin:0px auto;
+
+        .svg-footer{
+            display: block; 
+            width:100%;
+            position: absolute;
+        }
+
+        .footer-info{
+            position: absolute;
+            font-size: 10px;
+            width: 120px;
+            top: 170px;
+            left:10px;
+
+
+            p, a{
+                color: #fff;
+                font-weight: normal;
+                text-align: center;
+                margin-bottom: 10px;
+            }
+
+            a{
+                font-size: 11px;
+                text-decoration: underline;
+
+                &:hover{
+                    text-decoration: none;
+                }
+            }
+        }
     }
 }
 
