--- a/components/sass/_layout.scss
+++ b/components/sass/_layout.scss
@@ -177,28 +177,50 @@ Main
     .section-4{
         
         .team-card{
+            margin: 0 auto;
+            margin-top: 40px;
             position: relative;
             @include border-radius(8px);
-            border:2px solid $mainRed;
-            width:310px;
-            height: 140px;
+            border:3px solid $mainRed;
+
+            width:240px;
+
+            a:hover{
+                text-decoration: none;
+            }
 
             h2{
-                position: absolute;
-                left: 30px;
-                top: 25px;
+                text-align: center;
+                margin-top: 30px;
             }
 
             h3{
-                position: absolute;
-                left: 30px;
-                top: 60px;
+                text-align: center;
+                margin-top: 10px;
             }
 
-            img{
+            .social-icons{
+                position: relative;
+                margin: 0 auto;
+                margin-top: 10px;
+                margin-bottom: 30px;
+                width:165px;
+                height: 50px;                
+
+                .svg-social{
+                    position: relative;
+                    width: 50px;
+                    
+                }
+            }
+
+            .photo{
+                display: none;
                 position: absolute;
-                right: 30px;
-                top: 50px;
+                right: 20px;
+                bottom: 11px;
+                width: 80px;
+
             }
         }
     }
@@ -241,21 +263,30 @@ footer{
 
     .footer-label{
         position: relative;
-        width:140px;
+        width:160px;
         margin:0px auto;
+
 
         .svg-footer{
             display: block; 
             width:100%;
             position: absolute;
+
         }
 
         .footer-info{
             position: absolute;
-            font-size: 10px;
-            width: 120px;
-            top: 170px;
+            font-size: 12px;
+            width: 140px;
+            top: 190px;
             left:10px;
+
+            .footer-divider{
+                border-top: 5px solid #fff;
+                width: 140px;
+                margin: 15px 0px;
+
+            }
 
 
             p, a{
@@ -266,7 +297,7 @@ footer{
             }
 
             a{
-                font-size: 11px;
+                font-size: 12px;
                 text-decoration: underline;
 
                 &:hover{
