--- a/components/sass/_smartphone.scss
+++ b/components/sass/_smartphone.scss
@@ -3,8 +3,82 @@ Smartphones
 **********/
 @media handheld and (max-width: 480px), screen and (max-device-width: 480px), screen and (max-width: 700px){
 
-	.content{
-		//max-width:310px;
+
+	p, a, h1, h2, h3{
+	    line-height:120%;
+	}
+
+	h1 {
+	    font-size: 2em;
+	    line-height:120%;
+	}
+
+	h2 {
+		font-size:1.05em;
+	}
+
+	
+
+	/**********
+	Header
+	**********/
+
+	header{
+	    height: 60px;
+	    
+	    .svg-logo{
+	        width: 50px;
+	    }
+	    
+	}
+
+
+
+
+
+	/**********
+	Main 
+	**********/
+
+	.main{
+
+
+	    .section-1{
+	        
+	        h1{
+	            margin-top:15vh;
+	        }
+
+	        h2{
+	        	padding: 0px;
+	        	margin-top: 3vh;
+	        }
+
+	        .svg-wwd{
+	            max-width:700px;
+	            margin-top:12vh;
+	        }
+	        
+	    }
+
+	}
+
+
+
+	footer{
+
+	    h1{
+	        margin-bottom: 3vh;
+	    }
+
+	    .team-card-container{
+			width: 240px;
+
+			.team-card{
+				margin: 0px;
+			}
+		}
+
 	}
 
 }
