--- a/components/sass/_tablet.scss
+++ b/components/sass/_tablet.scss
@@ -4,8 +4,75 @@ Tablet
 @media (max-width: 780px) {
 
 	.content{
-		//max-width:750px;
+		margin-right: 5%;
+		margin-left: 5%;
+	}
+
+	p, a, h1, h2, h3{
+	    line-height:140%;
+	}
+
+	h1 {
+	    font-size: 3em;
+	    line-height:170%;
+	}
+
+	h2 {
+		font-size:1.2em;
 	}
 
 
-}
+	/**********
+	Header
+	**********/
+
+	header{
+	    height: 60px;
+	    
+	    .svg-logo{
+	        width: 60px;
+	    }
+	    
+	}
+
+
+
+
+
+	/**********
+	Main 
+	**********/
+
+	.main{
+
+
+	    .section-1{
+	        
+	        h1{
+	            margin-top:15vh;
+	        }
+
+	        h2{
+	        	padding: 0px 40px;
+	        }
+
+	        .svg-wwd{
+	            max-width:700px;
+	            margin-top:12vh;
+	        }
+	        
+	    }
+
+	}
+
+
+
+	footer{
+
+	    h1{
+	        margin-bottom: 3vh;
+	    }
+
+	}
+
+} // end query
