--- a/components/sass/_layout.scss
+++ b/components/sass/_layout.scss
@@ -124,6 +124,10 @@ Main
             max-width:750px;
             margin-top:12vh;
         }
+
+        .svg-wwd2{
+            display:none;
+        }
         
         
     }
