--- a/components/sass/_layout.scss
+++ b/components/sass/_layout.scss
@@ -7,6 +7,7 @@ content
 .content{
 	max-width:960px;
     margin:0px auto;
+
 }
 
 
@@ -94,19 +95,21 @@ Main
 **********/
 
 .main{
+    height: 100%;
 
     section{
-        min-height:100vh;
+        height:100%;
+
 
         h1{
-            margin-top:10vh;
+            margin-top:10%;
         }
     }
 
     .section-1{
         
         h1{
-            margin-top:20vh;
+            margin-top:15%;
         }
 
 
@@ -114,7 +117,7 @@ Main
             display: block; 
             width:80px;
             margin:0px auto;
-            margin-top:10vh;
+            margin-top:10%;
 
         }
 
@@ -122,7 +125,7 @@ Main
             display: block;
             margin:0px auto;
             max-width:750px;
-            margin-top:12vh;
+            margin-top:7%;
         }
 
         .svg-wwd2{
@@ -138,15 +141,15 @@ Main
             display: block;
             margin:0px auto;
             max-width:800px;
-            margin-top:10vh;
+            margin-top:10%;
         }
     }
 
     .section-3{
-        min-height:80vh;
+        min-height:80%;
 
         h1{
-            margin-bottom: 8vh;
+            margin-bottom: 8%;
         }
 
         .client-row{
@@ -187,9 +190,11 @@ Main
 
 
 footer{
+    margin-top: 100px;
+    min-height: 100%;
 
     h1{
-        margin-bottom: 4vh;
+        margin-bottom: 4%;
     }
 
     .team-card-container{
@@ -252,7 +257,7 @@ footer{
         position: relative;
         width: 80px;
         height: 90px;
-        margin-bottom: 15vh;
+        margin-bottom: 15%;
 
         img{
             width: 100%;
