--- a/components/sass/_layout.scss
+++ b/components/sass/_layout.scss
@@ -1,15 +1,5 @@
 
 
-/**********
-content
-**********/
-
-.content{
-	max-width:960px;
-    margin:0px auto;
-
-}
-
 
 
 /**********
@@ -18,7 +8,7 @@ Header
 
 header{
     z-index: 9000;
-    position:absolute;
+    position:relative;
     left: 0px;
     right: 0px;
     top: 0px;
@@ -31,59 +21,7 @@ header{
         position: relative;
         margin: 0 auto;
         margin-top: 10px;
-    }
-
-    // .content{
-    //     position: relative;
-    //     margin: 0px auto;
-    //     width: 491px;
-
-    //     .svg-menu{
-    //         width:120px;
-    //     }
-
-
-    //     nav{
-    //         position:relative;;
-    //         overflow:hidden;
-    //         width: 100%;
-    //         margin: 0 auto;
-            
-
-    //         ul{
-
-    //             .svg-logo{
-    //                 width: 50px;
-    //                 position: relative;
-    //                 margin: 5px 20px;
-    //                 float: left;
-    //             }
-
-    //             li{
-    //                 display:block;
-    //                 margin-top:20px;
-    //                 width: 100px;
-    //                 position: relative;
-    //                 float: left;
-    //                 text-align: center;
-
-    //                 a{
-    //                     text-decoration: none;
-    //                     padding:5px 10px 5px 10px;
-    //                     font-size: 14px;
-
-
-    //                     &:hover{
-    //                        //padding-left:38px; 
-    //                        text-decoration: underline;
-    //                     }
-    //                 }
-    //             }
-    //         }
-    //     }
-    // }
-
-    
+    }    
 }
 
 
@@ -95,10 +33,16 @@ Main
 **********/
 
 .main{
+    position: relative;
+    max-width:960px;
+    margin:0px auto;
     height: 100%;
 
     section{
+        background: #fff;
+        position: relative;
         height:100%;
+        border: 1px solid blue;
 
 
         h1{
@@ -168,162 +112,149 @@ Main
         
     }
 
-    .client-shots{
-        overflow: auto;
-        margin-bottom: 270px;
-
-        img{
-            position: relative;
-            float: left;
-            width: 33.3%;
-            margin: 0px;
-            padding: 0px;
-        }
-    }
-
     .section-4{
-        
-    }
+        h1{
+            margin-bottom: 4%;
+        }
 
-}
-
-
-
-footer{
-    margin-top: 100px;
-    min-height: 100%;
-
-    h1{
-        margin-bottom: 4%;
-    }
-
-    .team-card-container{
-        position: relative;
-        margin: 0 auto;
-        margin-bottom: 50px;
-        overflow: auto;
-        max-width: 490px;
-
-        .team-card{
-            margin: 20px 0px;
+        .team-card-container{
             position: relative;
-            @include border-radius(8px);
-            //border:3px solid $mainRed;
-            float: left;
-            width:240px;
+            margin: 0 auto;
+            margin-bottom: 50px;
+            overflow: auto;
+            max-width: 490px;
 
-            a:hover{
-                text-decoration: none;
-            }
-
-            h2{
-                text-align: center;
-                margin-top: 30px;
-            }
-
-            h3{
-                text-align: center;
-                margin-top: 10px;
-            }
-
-            .social-icons{
+            .team-card{
+                margin: 20px 0px;
                 position: relative;
-                margin: 0 auto;
-                margin-top: 10px;
-                margin-bottom: 30px;
-                width:165px;
-                height: 50px;                
+                @include border-radius(8px);
+                //border:3px solid $mainRed;
+                float: left;
+                width:240px;
 
-                .svg-social{
-                    position: relative;
-                    width: 50px;
-                    
-                }
-            }
-
-            .photo{
-                display: none;
-                position: absolute;
-                right: 20px;
-                bottom: 11px;
-                width: 80px;
-
-            }
-        }
-    }
-
-    .mail-button-container{
-        margin: 0px auto;
-        position: relative;
-        width: 80px;
-        height: 90px;
-        margin-bottom: 15%;
-
-        img{
-            width: 100%;
-            position: absolute;
-            top: 0px;
-        }
-
-        .svg-mail-2{
-            top: 3px;
-        }
-
-        &:hover{
-
-            .svg-mail-1{
-                transform: rotateY(180deg);
-                transition: 0.6s;
-            }
-        }
-    }
-
-    .footer-label{
-        position: relative;
-        width:160px;
-        margin:0px auto;
-
-
-        .svg-footer{
-            display: block; 
-            width:100%;
-            position: absolute;
-
-        }
-
-        .footer-info{
-            position: absolute;
-            font-size: 12px;
-            width: 140px;
-            top: 190px;
-            left:10px;
-
-            .footer-divider{
-                border-top: 5px solid #fff;
-                width: 140px;
-                margin: 15px 0px;
-
-            }
-
-
-            p, a{
-                color: #fff;
-                font-weight: normal;
-                text-align: center;
-                margin-bottom: 10px;
-            }
-
-            a{
-                font-size: 12px;
-                text-decoration: underline;
-
-                &:hover{
+                a:hover{
                     text-decoration: none;
                 }
+
+                h2{
+                    text-align: center;
+                    margin-top: 30px;
+                }
+
+                h3{
+                    text-align: center;
+                    margin-top: 10px;
+                }
+
+                .social-icons{
+                    position: relative;
+                    margin: 0 auto;
+                    margin-top: 10px;
+                    margin-bottom: 30px;
+                    width:165px;
+                    height: 50px;                
+
+                    .svg-social{
+                        position: relative;
+                        width: 50px;
+                        
+                    }
+                }
+
+                .photo{
+                    display: none;
+                    position: absolute;
+                    right: 20px;
+                    bottom: 11px;
+                    width: 80px;
+
+                }
+            }
+        }
+
+        .mail-button-container{
+            margin: 0px auto;
+            position: relative;
+            width: 80px;
+            height: 90px;
+            margin-bottom: 15%;
+
+            img{
+                width: 100%;
+                position: absolute;
+                top: 0px;
+            }
+
+            .svg-mail-2{
+                top: 3px;
+            }
+
+            &:hover{
+
+                .svg-mail-1{
+                    transform: rotateY(180deg);
+                    transition: 0.6s;
+                }
             }
         }
     }
+
+    footer{
+        position: relative;
+        border: 1px solid green;
+
+        .footer-label{
+            position: relative;
+            width:160px;
+            margin:0px auto;
+
+
+            .svg-footer{
+                display: block; 
+                width:100%;
+                position: absolute;
+
+            }
+
+            .footer-info{
+                position: absolute;
+                font-size: 12px;
+                width: 140px;
+                top: 190px;
+                left:10px;
+
+                .footer-divider{
+                    border-top: 5px solid #fff;
+                    width: 140px;
+                    margin: 15px 0px;
+
+                }
+
+
+                p, a{
+                    color: #fff;
+                    font-weight: normal;
+                    text-align: center;
+                    margin-bottom: 10px;
+                }
+
+                a{
+                    font-size: 12px;
+                    text-decoration: underline;
+
+                    &:hover{
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
+    }
+
 }
+
+
+
+
 
 
 
