--- a/components/sass/_tablet.scss
+++ b/components/sass/_tablet.scss
@@ -63,16 +63,12 @@ Tablet
 	        
 	    }
 
-	}
-
-
-
-	footer{
-
-	    h1{
-	        margin-bottom: 3vh;
+	    .section-4{
+	    	margin-bottom: 3vh;
 	    }
 
 	}
+
+
 
 } // end query
