--- a/components/sass/_smartphone.scss
+++ b/components/sass/_smartphone.scss
@@ -14,7 +14,7 @@ Smartphones
 	}
 
 	h2 {
-		font-size:1.05em;
+		font-size:1em;
 	}
 
 	
@@ -41,17 +41,21 @@ Smartphones
 	**********/
 
 	.main{
+		height: auto;
 
+		section{
+			height: auto;
+		}
 
 	    .section-1{
 	        
 	        h1{
-	            margin-top:15vh;
+	            margin-top:100px;
 	        }
 
 	        h2{
-	        	padding: 0px;
-	        	margin-top: 3vh;
+	        	padding: 0px 10px;
+	        	margin-top: 25px;
 	        }
 
 	        .svg-wwd{
@@ -69,24 +73,22 @@ Smartphones
 	        
 	    }
 
-	}
+	    .section-4{
+	    	h1{
+		        margin-bottom: 60px;
+		    }
 
+		    .team-card-container{
+				width: 240px;
 
-
-	footer{
-
-	    h1{
-	        margin-bottom: 3vh;
+				.team-card{
+					margin: 0px;
+				}
+			}
 	    }
 
-	    .team-card-container{
-			width: 240px;
-
-			.team-card{
-				margin: 0px;
-			}
-		}
-
 	}
+
+
 
 }
