--- a/components/sass/_smartphone.scss
+++ b/components/sass/_smartphone.scss
@@ -9,12 +9,12 @@ Smartphones
 	}
 
 	h1 {
-	    font-size: 2em;
+	    font-size: 1.8em;
 	    line-height:120%;
 	}
 
 	h2 {
-		font-size:1em;
+		font-size:1.1em;
 	}
 
 	
@@ -41,14 +41,17 @@ Smartphones
 	**********/
 
 	.main{
-		height: auto;
+		min-height: 100%;
+
 
 		section{
-			height: auto;
+			min-height: 100%;
 		}
 
 	    .section-1{
+	        height: 1000px;
 	        
+
 	        h1{
 	            margin-top:100px;
 	        }
@@ -74,6 +77,8 @@ Smartphones
 	    }
 
 	    .section-4{
+	    	height: 800px;
+
 	    	h1{
 		        margin-bottom: 60px;
 		    }
