--- a/components/sass/_smartphone.scss
+++ b/components/sass/_smartphone.scss
@@ -77,10 +77,11 @@ Smartphones
 	    }
 
 	    .section-4{
+	    	margin-top: 150px;
 	    	height: 700px;
 
 	    	h1{
-		        margin-bottom: 60px;
+		        margin-bottom: 30px;
 		    }
 
 		    .team-card-container{
