--- a/components/sass/_layout.scss
+++ b/components/sass/_layout.scss
@@ -14,14 +14,14 @@ header{
     top: 0px;
     height: 65px;
 
-    
+
     .svg-logo{
         display: block;
         width: 80px;
         position: relative;
         margin: 0 auto;
         margin-top: 10px;
-    }    
+    }
 }
 
 
@@ -29,7 +29,7 @@ header{
 
 
 /**********
-Main 
+Main
 **********/
 
 .main{
@@ -50,6 +50,7 @@ Main
     }
 
     .section-1{
+        min-height:80vh;
         
         h1{
             margin-top:18vh;
@@ -57,7 +58,7 @@ Main
 
 
         .svg-down{
-            display: block; 
+            display: block;
             width:80px;
             margin:0px auto;
             margin-top:10vh;
@@ -74,12 +75,12 @@ Main
         .svg-wwd2{
             display:none;
         }
-        
-        
+
+
     }
 
     .section-2{
-        
+
         .svg-wwd{
             display: block;
             margin:0px auto;
@@ -108,18 +109,21 @@ Main
             margin-left:13%;
         }
 
-        
+
     }
 
     .section-4{
+
+        min-height:40vh;
+
         h1{
-            margin-bottom: 4%;
+            margin-bottom: 1%;
         }
 
         .team-card-container{
             position: relative;
             margin: 0 auto;
-            margin-bottom: 50px;
+            margin-bottom: 30px;
             overflow: auto;
             max-width: 490px;
 
@@ -151,12 +155,12 @@ Main
                     margin-top: 10px;
                     margin-bottom: 30px;
                     width:165px;
-                    height: 50px;                
+                    height: 50px;
 
                     .svg-social{
                         position: relative;
                         width: 50px;
-                        
+
                     }
                 }
 
@@ -208,7 +212,7 @@ Main
 
 
             .svg-footer{
-                display: block; 
+                display: block;
                 width:100%;
                 position: absolute;
 
@@ -271,13 +275,10 @@ only screen and (   min--moz-device-pixel-ratio: 2),
 only screen and (     -o-min-device-pixel-ratio: 2/1),
 only screen and (        min-device-pixel-ratio: 2),
 only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx) { 
- 
-    
+only screen and (                min-resolution: 2dppx) {
+
+
     .image{
          background: url ('myIMG@2x.png');
     }
 }
-
-
-
